--- a/pyThermoEst/data/ref1.yml
+++ b/pyThermoEst/data/ref1.yml
@@ -1,8 +1,15 @@
 C-(H)3(C):
-  - C1-H2
-  - C1-H3
-  - C1-H4
-  - C1-C5
+  id: 1
+  elements:
+    - C1-H2
+    - C1-H3
+    - C1-H4
+    - C1-C5
+  a: 4.19845
+  b: -0.312709
+  c: 0.178609
+  Tmin: 85
+  Tmax: 705
 C-(H)2(C)2:
   - C1-H2
   - C1-H3
