--- a/data/sheet1.yml
+++ b/data/sheet1.yml
@@ -334,19 +334,29 @@
     - Chain1: ["*=C1", "C1-C2", "C2=C3", "C3-C4", "C4=C5", "C5-*"]
 # REVIEW
 - No.: 27
-  Group: CBF-(CBF)(CB)2
-  a[i]: -4.93252
-  b[i]: 3.53466
-  d[i]: -0.483297
-  T[min]: 248
-  T[max]: 700
-  Parent: None
-  Bonds:
-    - C1-C2
-    - C1=C3
-    - C1-C4
-    - C4-C5
-    - C4=C6
+  # Group: CBF-(CBF)(CB)2
+  # a[i]: -4.93252
+  # b[i]: 3.53466
+  # d[i]: -0.483297
+  # T[min]: 248
+  # T[max]: 700
+  # Parent-Bonds:
+  #   - C1-C2
+  #   - C2=C3
+  #   - C3-C4
+  #   - C4=C5
+  #   - C5-C6
+  #   - C6=C1
+  #   - C1*{Chain1}
+  #   - C6*{Chain1}
+  # Parent-Blocks:
+  #   - Chain1: ["*-C1", "C1=C2", "C2-C3", "C3=C4", "C4-**"]
+  # Bonds:
+  #   - C1-C2
+  #   - C1=C3
+  #   - C1-C4
+  #   - C4-C5
+  #   - C4=C6
 # REVIEW
 - No.: 28
   # Group: CBF-(CBF)2(CB)
