--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,9 @@ classifiers = [
 ]
 dependencies = [
     "pandas>=2.3.3",
+    "pyyaml>=6.0.3",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
-    "pyyaml>=6.0.3",
 ]
 
 [project.optional-dependencies]
@@ -72,7 +72,7 @@ exclude = [
 ]
 
 [tool.setuptools.package-data]
-pyThermoFlash = [
+pyThermoEst = [
     'config/*.yml',
     'config/*.csv',
     'data/*.csv',
