--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "hologen",
         "Joback",
         "nonring",
-        "thioether"
+        "Rozicka",
+        "RUZICKA",
+        "thioether",
+        "zabransky"
     ]
 }
