--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "pyThermoEst"
 version = "0.1.0"
-description = "Add your description here"
+description = "A Python toolkit for estimating thermodynamic properties"
 readme = "README.md"
 requires-python = ">=3.11"
 license = "MIT"
@@ -18,6 +18,8 @@ keywords = [
     'thermodynamics',
     'property-estimation',
     'joback-method',
+    'zabransky-ruzicka-method',
+    'group-contribution-methods',
 ]
 classifiers = [
     "Development Status :: 1 - Planning",
