add data for cg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
         "allene",
+        "Constantinou",
         "COOH",
         "diol",
+        "Gani",
         "hologen",
         "Joback",
         "nonring",
