Refactor dependencies and update package versions
- Removed markdown-it-py and mdurl packages from dependencies.
- Added pycuc package with dependencies on pandas and pyyaml.
- Updated pythermoest package version to 0.1.3 and added pycuc as a dependency.
- Changed pygments package to pythermodb-settings with updated dependencies.
- Updated scipy package version to 1.16.3 and adjusted its dependencies accordingly.
- Cleaned up unnecessary optional and dev dependencies.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,17 @@
 {
     "cSpell.words": [
         "allene",
+        "arctan",
         "Constantinou",
         "COOH",
+        "degc",
         "diol",
         "Gani",
         "hologen",
         "Joback",
+        "nfev",
         "nonring",
+        "Pmodel",
         "Rozicka",
         "RUZICKA",
         "thioether",
