--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,20 +30,14 @@ classifiers = [
     "Operating System :: Microsoft :: Windows",
 ]
 dependencies = [
+    "numpy>=2.3.5",
+    "scipy>=1.16.3",
     "pandas>=2.3.3",
     "pyyaml>=6.0.3",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
-]
-
-[project.optional-dependencies]
-dev = [
-    "rich>=14.2.0",
-]
-
-[tool.uv]
-dev-dependencies = [
-    "rich>=14.2.0",
+    "pythermodb-settings",
+    "pycuc",
 ]
 
 [project.urls]
