--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyThermoEst"
-version = "0.1.3"
+version = "0.2.0"
 description = "A Python toolkit for estimating thermodynamic properties"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -20,6 +20,7 @@ keywords = [
     'joback-method',
     'zabransky-ruzicka-method',
     'group-contribution-methods',
+    'parameter-estimation',
 ]
 classifiers = [
     "Development Status :: 1 - Planning",
